# Simplex

./: .gitignore  CMakeLists.txt  README.md
include/cli/: cli.hpp
include/engine/: engine.hpp
include/parsers/: rdview.hpp
include/rdview/: rdtokenizer.hpp
include/utils/: defs.hpp  linear.hpp  resources.hpp  vertex_layout.hpp
include/utils/linear/: mat4.hpp  vec2.hpp  vec3.hpp  vec4.hpp
source/: cli.cpp  entry.cpp  rdtokenizer.cpp  rdview.cpp  resources.cpp
tests/rdview/: basic_01.rd  basic_02.rd  invalid_numbers.rd  numbers.rd  whitespace.rd
